# mycon_learn

./: .env.example  .gitignore  CLAUDE.md  MyCon Learn.bat  README.md  deployment_notes.md  design_doc.md  pyproject.toml  run.py  seed_db.py  start.bat
.claude/: settings.local.json
app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  vocab_loader.py
static/: index.html
tests/: test_api.py
vocab/: common_verbs.csv  daily_life.csv  family.csv  feelings.csv  food.csv  greetings.csv  numbers.csv  places.csv  questions.csv  responses.csv  texting_phrases.csv  times.csv
